закончил выпадающие табы в левом меню

--- a/index.html
+++ b/index.html
@@ -97,45 +97,183 @@
 								<div class="dropright-item parent active" role="button" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
 									<a href="#">СВЧ-компоненты</a>
 									<div class="dropdown-menu">
-										<a class="dropright-item-level1" href="#">METDA</a>
-										<a class="dropright-item-level1" href="#">Neditek</a>
-										<a class="dropright-item-level1" href="#">HiWafer</a>
+										<div class="row m-3">
+											<div class="col-4">
+												<ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
+													<li class="nav-item" role="presentation">
+														<a class="nav-link active" id="pills-neditek-tab" data-toggle="pill" href="#pills-neditek" role="tab"
+															aria-controls="pills-metda" aria-selected="true">METDA</a>
+													</li>
+													<li class="nav-item" role="presentation">
+														<a class="nav-link" id="pills-neditek-tab" data-toggle="pill" href="#pills-neditek" role="tab"
+															aria-controls="pills-neditek" aria-selected="false">Neditek</a>
+													</li>
+													<li class="nav-item" role="presentation">
+														<a class="nav-link" id="pills-hiwafer-tab" data-toggle="pill" href="#pills-hiwafer" role="tab"
+															aria-controls="pills-hiwafer" aria-selected="false">HiWafer</a>
+													</li>
+												</ul>
+											</div>
+											<div class="col-8">
+												<div class="tab-content" id="pills-tabContent">
+													<div class="tab-pane fade show active" id="pills-metda" role="tabpanel" aria-labelledby="pills-metda-tab">
+														<ul>
+															<li><a href="#">Интегральные схемы бескорпусные</a></li>
+															<li><a href="#">Транзисторы корпусированные</a></li>
+															<li><a href="#">Усилители мощности модульные</a></li>
+															<li><a href="#">Интегральные схемы корпусированные</a></li>
+															<li><a href="#">Трехмерные сборки</a></li>
+														</ul>
+													</div>
+													<div class="tab-pane fade" id="pills-neditek" role="tabpanel" aria-labelledby="pills-neditek-tab">
+														<ul>
+															<li><a href="#">Lorem ipsum dolor sit amet #1</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #2</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #3</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #4</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #5</a></li>
+														</ul>
+													</div>
+													<div class="tab-pane fade" id="pills-hiwafer" role="tabpanel" aria-labelledby="pills-hiwafer-tab">
+														<ul>
+															<li><a href="#">Lorem ipsum dolor sit amet #6</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #7</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #8</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #9</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #10</a></li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 							<div class="dropright">
-								<div class="dropright-item parent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<div class="dropright-item parent" role="button" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
 									<a href="#">Цифровые микросхемы</a>
 									<div class="dropdown-menu">
-										<a class="dropdown-item" href="#">Пункт1</a>
-										<a class="dropdown-item" href="#">Пункт2</a>
-										<a class="dropdown-item" href="#">Пункт3</a>
+										<div class="row m-3">
+											<div class="col-4">
+												<ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
+													<li class="nav-item" role="presentation">
+														<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-Lorem1" role="tab"
+															aria-controls="pills-home" aria-selected="true">Lorem ipsum</a>
+													</li>
+													<li class="nav-item" role="presentation">
+														<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-Lorem2" role="tab"
+															aria-controls="pills-profile" aria-selected="false">Lorem ipsum</a>
+													</li>
+													<li class="nav-item" role="presentation">
+														<a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-Lorem3" role="tab"
+															aria-controls="pills-contact" aria-selected="false">Lorem ipsum</a>
+													</li>
+												</ul>
+											</div>
+											<div class="col-8">
+												<div class="tab-content" id="pills-tabContent">
+													<div class="tab-pane fade show active" id="pills-Lorem1" role="tabpanel" aria-labelledby="pills-home-tab">
+														<ul>
+															<li><a href="#">Lorem ipsum dolor sit amet #1</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #2</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #3</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #4</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #5</a></li>
+														</ul>
+													</div>
+													<div class="tab-pane fade" id="pills-Lorem2" role="tabpanel" aria-labelledby="pills-profile-tab">
+														<ul>
+															<li><a href="#">Lorem ipsum dolor sit amet #6</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #7</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #8</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #9</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #10</a></li>
+														</ul>
+													</div>
+													<div class="tab-pane fade" id="pills-Lorem3" role="tabpanel" aria-labelledby="pills-contact-tab">
+														<ul>
+															<li><a href="#">Lorem ipsum dolor sit amet #11</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #12</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #13</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #14</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #15</a></li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
 							<div class="dropright">
-								<div class="dropright-item parent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								<div class="dropright-item parent" role="button" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
 									<a href="#">Аналоговые микросхемы</a>
 									<div class="dropdown-menu">
-										<a class="dropdown-item" href="#">Пункт1</a>
-										<a class="dropdown-item" href="#">Пункт2</a>
-										<a class="dropdown-item" href="#">Пункт3</a>
+										<div class="row m-3">
+											<div class="col-4">
+												<ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
+													<li class="nav-item" role="presentation">
+														<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-Lorem4" role="tab"
+															aria-controls="pills-home" aria-selected="true">Lorem ipsum</a>
+													</li>
+													<li class="nav-item" role="presentation">
+														<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-Lorem5" role="tab"
+															aria-controls="pills-profile" aria-selected="false">Lorem ipsum</a>
+													</li>
+													<li class="nav-item" role="presentation">
+														<a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-Lorem6" role="tab"
+															aria-controls="pills-contact" aria-selected="false">Lorem ipsum</a>
+													</li>
+												</ul>
+											</div>
+											<div class="col-8">
+												<div class="tab-content" id="pills-tabContent">
+													<div class="tab-pane fade show active" id="pills-Lorem4" role="tabpanel" aria-labelledby="pills-home-tab">
+														<ul>
+															<li><a href="#">Lorem ipsum dolor sit amet #1</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #2</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #3</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #4</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #5</a></li>
+														</ul>
+													</div>
+													<div class="tab-pane fade" id="pills-Lorem5" role="tabpanel" aria-labelledby="pills-profile-tab">
+														<ul>
+															<li><a href="#">Lorem ipsum dolor sit amet #6</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #7</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #8</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #9</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #10</a></li>
+														</ul>
+													</div>
+													<div class="tab-pane fade" id="pills-Lorem6" role="tabpanel" aria-labelledby="pills-contact-tab">
+														<ul>
+															<li><a href="#">Lorem ipsum dolor sit amet #11</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #12</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #13</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #14</a></li>
+															<li><a href="#">Lorem ipsum dolor sit amet #15</a></li>
+														</ul>
+													</div>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
-							<div class="dropright-item" role="button" id="dropdownMenuLink4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<div class="dropright-item" role="button" id="dropdownMenuLink4" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
 								<a href="#">Пассивные компоненты</a>
 							</div>
-							<div class="dropright-item" role="button" id="dropdownMenuLink5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<div class="dropright-item" role="button" id="dropdownMenuLink5" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
 								<a href="#">Электромеханические компоненты</a>
 							</div>
-							<div class="dropright-item" role="button" id="dropdownMenuLink6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<div class="dropright-item" role="button" id="dropdownMenuLink6" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
 								<a href="#">Кварцевые генераторы и резонаторы</a>
 							</div>
-							<div class="dropright-item" role="button" id="dropdownMenuLink7" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<div class="dropright-item" role="button" id="dropdownMenuLink7" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
 								<a href="#">Оптоэлектронные компоненты</a>
 							</div>
-							<div class="dropright-item" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<div class="dropright-item" role="button" id="dropdownMenuLink" data-toggle="dropdown-none" aria-haspopup="true" aria-expanded="false">
 								<a href="#">Вторичные источники питания</a>
 							</div>
 						</div>
