--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 											<div class="col-4">
 												<ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
 													<li class="nav-item" role="presentation">
-														<a class="nav-link active" id="pills-neditek-tab" data-toggle="pill" href="#pills-neditek" role="tab"
+														<a class="nav-link active" id="pills-neditek-tab" data-toggle="pill" href="#pills-metda" role="tab"
 															aria-controls="pills-metda" aria-selected="true">METDA</a>
 													</li>
 													<li class="nav-item" role="presentation">
