--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
 											<div class="col-4">
 												<ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
 													<li class="nav-item" role="presentation">
-														<a class="nav-link active" id="pills-neditek-tab" data-toggle="pill" href="#pills-metda" role="tab"
+														<a class="nav-link parent active" id="pills-neditek-tab" data-toggle="pill" href="#pills-metda" role="tab"
 															aria-controls="pills-metda" aria-selected="true">METDA</a>
 													</li>
 													<li class="nav-item" role="presentation">
-														<a class="nav-link" id="pills-neditek-tab" data-toggle="pill" href="#pills-neditek" role="tab"
+														<a class="nav-link parent" id="pills-neditek-tab" data-toggle="pill" href="#pills-neditek" role="tab"
 															aria-controls="pills-neditek" aria-selected="false">Neditek</a>
 													</li>
 													<li class="nav-item" role="presentation">
-														<a class="nav-link" id="pills-hiwafer-tab" data-toggle="pill" href="#pills-hiwafer" role="tab"
+														<a class="nav-link parent" id="pills-hiwafer-tab" data-toggle="pill" href="#pills-hiwafer" role="tab"
 															aria-controls="pills-hiwafer" aria-selected="false">HiWafer</a>
 													</li>
 												</ul>
@@ -157,15 +157,15 @@
 											<div class="col-4">
 												<ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
 													<li class="nav-item" role="presentation">
-														<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-Lorem1" role="tab"
+														<a class="nav-link parent active" id="pills-home-tab" data-toggle="pill" href="#pills-Lorem1" role="tab"
 															aria-controls="pills-home" aria-selected="true">Lorem ipsum</a>
 													</li>
 													<li class="nav-item" role="presentation">
-														<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-Lorem2" role="tab"
+														<a class="nav-link parent" id="pills-profile-tab" data-toggle="pill" href="#pills-Lorem2" role="tab"
 															aria-controls="pills-profile" aria-selected="false">Lorem ipsum</a>
 													</li>
 													<li class="nav-item" role="presentation">
-														<a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-Lorem3" role="tab"
+														<a class="nav-link parent" id="pills-contact-tab" data-toggle="pill" href="#pills-Lorem3" role="tab"
 															aria-controls="pills-contact" aria-selected="false">Lorem ipsum</a>
 													</li>
 												</ul>
@@ -213,15 +213,15 @@
 											<div class="col-4">
 												<ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
 													<li class="nav-item" role="presentation">
-														<a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-Lorem4" role="tab"
+														<a class="nav-link parent active" id="pills-home-tab" data-toggle="pill" href="#pills-Lorem4" role="tab"
 															aria-controls="pills-home" aria-selected="true">Lorem ipsum</a>
 													</li>
 													<li class="nav-item" role="presentation">
-														<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-Lorem5" role="tab"
+														<a class="nav-link parent" id="pills-profile-tab" data-toggle="pill" href="#pills-Lorem5" role="tab"
 															aria-controls="pills-profile" aria-selected="false">Lorem ipsum</a>
 													</li>
 													<li class="nav-item" role="presentation">
-														<a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-Lorem6" role="tab"
+														<a class="nav-link parent" id="pills-contact-tab" data-toggle="pill" href="#pills-Lorem6" role="tab"
 															aria-controls="pills-contact" aria-selected="false">Lorem ipsum</a>
 													</li>
 												</ul>
