замена иконок на svg

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 						<div class="row strengths">
 							<div class="col-sm-6">
 								<div class="d-flex">
-									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_305.png" alt="support"></span>
+									<img src="img/svg/service-2.svg" alt="support">
 									<div>
 										<h3 class="base-red">Техническая поддержка</h3>
 										<p>На всех этапах проектирования</p>
@@ -364,7 +364,7 @@
 							</div>
 							<div class="col-sm-6">
 								<div class="d-flex">
-									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_313.png" alt="support"></span>
+									<img src="img/svg/sertificate-2.svg" alt="support">
 									<div>
 										<h3 class="base-red">Сертификаты</h3>
 										<p>Являемся квалифицированным поставщиком ЭКБ</p>
@@ -374,7 +374,7 @@
 							<div class="w-100"></div>
 							<div class="col-sm-6">
 								<div class="d-flex">
-									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_307.png" alt="support"></span>
+									<img src="img/svg/tests-2.svg" alt="support">
 									<div>
 										<h3 class="base-red">Проведение сертификационных испытаний</h3>
 										<p>Элементной базы</p>
@@ -383,7 +383,7 @@
 							</div>
 							<div class="col-sm-6">
 								<div class="d-flex">
-									<span class="bg-icon"><img src="img/vektornyy_smart_obekt_309.png" alt="support"></span>
+									<img src="img/svg/storehouse-2.svg" alt="support">
 									<div>
 										<h3 class="base-red">Собственный склад</h3>
 										<p>Хранения продукции</p>
