вёрстка страницы О Нас

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 		</section>
 
 		<!-- Main Block -->
-		<main class="main-content py-5">
+		<main class="main-home py-5">
 			<div class="container">
 				<div class="row home-page">
 					<div class="col-lg-6 col-xl-7">
