--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">О компании</a>
+							<a class="nav-link" href="about.html">О компании</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown-none" aria-haspopup="true"
