--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 						<div class="d-sm-flex no-gutters align-items-center text-center text-sm-left">
 							<div class="mb-3 mb-sm-0"><a href="/"><img class="logo" src="img/svg/logo.svg"
 										alt="Эпсилон логотип"></a></div>
-							<h1 class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</h1>
+							<p class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</p>
 						</div>
 					</div>
 					<div class="col-md mb-3 mb-md-0">
@@ -62,10 +62,10 @@
 				<div class="collapse navbar-collapse" id="navbarsExample07">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">О компании</a>
+							<a class="nav-link" href="about.html">О компании</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown-none"
@@ -311,19 +311,19 @@
 								<li class="breadcrumb-item active" aria-current="page">Библиотека</li>
 							</ol>
 						</nav>
-						<h2 class="base mt-3 mb-5">АО Эпсилон</h2>
+						<h1 class="base mt-3 mb-5">АО Эпсилон</h1>
 						<p class="red-deco">является ведущей специализированной компанией по поставке высоконадежной
 							Электронной Компонентной Базы (ЭКБ)
 							производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
-						<p>Наша компания имеет многолетние партнерские отношения с более чем 15-ю заводами Китайской
+						<p>Наша компания имеет многолетние партнерские <a class="link" href="#">отношения</a> с более чем 15-ю заводами Китайской
 							аэрокосмической
 							научно-технической корпорации (CASC), более чем 40-а заводами Китайской корпорации электронных
 							технологий (CETC) и более
 							20-ю частными предприятиями-изготовителями ЭКБ космического, военного и индустриального уровня
 							качества.</p>
-						<p class="blue-deco">Основу нашей компании составляют высококвалифицированные технические специалисты, обладающие более
+						<h2 class="blue-deco">Основу нашей компании составляют высококвалифицированные технические специалисты, обладающие более
 							чем 10-летним
-							опытом работы.</p>
+							опытом работы.</h2>
 						<p>АО «Эпсилон» уделяет особое внимание профессиональному, комплексному анализу потребностей
 							Российских предприятий в
 							ЭКБ,
