--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<div class="col-xl-5 mb-3 mb-xl-0">
 						<div class="d-sm-flex no-gutters align-items-center text-center text-sm-left">
 							<div class="mb-3 mb-sm-0"><a href="/"><img class="logo" src="img/svg/logo.svg" alt="Эпсилон логотип"></a></div>
-							<h1 class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</h1>
+							<p class="pl-sm-3 slogan">Официальный поставщик в РФ<br>высоконадежной ЭКБ производства КНР</p>
 						</div>
 					</div>
 					<div class="col-md mb-3 mb-md-0">
@@ -54,7 +54,7 @@
 				<div class="collapse navbar-collapse" id="navbarsExample07">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
-							<a class="nav-link" href="#">Главная <span class="sr-only">(current)</span></a>
+							<a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">О компании</a>
@@ -333,7 +333,7 @@
 			<div class="container">
 				<div class="row home-page">
 					<div class="col-lg-6 col-xl-7">
-						<h2 class="base mt-3 mb-5">АО Эпсилон</h2>
+						<h1 class="base mt-3 mb-5">АО Эпсилон</h1>
 						<p class="red-deco">является ведущей специализированной компанией по поставке высоконадежной Электронной Компонентной Базы (ЭКБ)
 						производства Китайской Народной Республики для предприятий Российской Федерации и стран СНГ.</p>
 					</div>
