начал стр Лицензии

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<a class="nav-link" href="about.html">О компании</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown-none" aria-haspopup="true"
+							<a class="nav-link dropdown-toggle" href="products.html" id="dropdown07" data-toggle="dropdown-none" aria-haspopup="true"
 								aria-expanded="false">Изделия</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
 								<a class="dropdown-item" href="#">СВЧ-компоненты</a>
@@ -71,13 +71,13 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Новости</a>
+							<a class="nav-link" href="news.html">Новости</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Лицензии и сертификаты</a>
+							<a class="nav-link" href="licenses.html">Лицензии и сертификаты</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Контакты</a>
+							<a class="nav-link" href="#contacts">Контакты</a>
 						</li>
 					</ul>
 					<form class="d-none d-lg-flex form-inline my-2 my-md-0">
@@ -652,7 +652,7 @@
 		</section>
 
 		<!-- Map block -->
-		<div class="map-eps">
+		<div id="contacts" class="map-eps">
 			<div style="width: auto;height: 450px" id="mapq8001z02"></div>
 			<script>
 			function YandexReadyHandlerq8001z02() {
