--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 							<a class="nav-link" href="about.html">О компании</a>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown-none"
+							<a class="nav-link dropdown-toggle" href="products.html" id="dropdown07" data-toggle="dropdown-none"
 								aria-haspopup="true" aria-expanded="false">Изделия</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown07">
 								<a class="dropdown-item" href="#">СВЧ-компоненты</a>
@@ -79,13 +79,13 @@
 							</div>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Новости</a>
+							<a class="nav-link" href="news.html">Новости</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Лицензии и сертификаты</a>
+							<a class="nav-link" href="licenses.html">Лицензии и сертификаты</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Контакты</a>
+							<a class="nav-link" href="#contacts">Контакты</a>
 						</li>
 					</ul>
 					<form class="d-none d-lg-flex form-inline my-2 my-md-0">
@@ -96,7 +96,7 @@
 		</nav>
 
 		<!-- Main Block Inner -->
-		<main class="main-inner d-flex justify-content-center">
+		<main class="main-inner">
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-lg-3 mb-md-5 mb-lg-0 pt-4 pb-5">
@@ -304,7 +304,7 @@
 						</div>
 					</div>
 
-					<div class="inner-content-right col-lg-9 px-5 pt-4 pb-5">
+					<div class="inner-content-right col-lg-9 px-5 pt-4">
 						<nav aria-label="breadcrumb">
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="#">Главная</a></li>
@@ -379,7 +379,7 @@
 		</section>
 
 		<!-- Map block -->
-		<div class="map-eps">
+		<div id="contacts" class="map-eps">
 			<div style="width: auto;height: 450px" id="mapq8001z02"></div>
 			<script>
 				function YandexReadyHandlerq8001z02() {
