--- a/licenses.html
+++ b/licenses.html
@@ -61,8 +61,8 @@
 
 				<div class="collapse navbar-collapse" id="navbarsExample07">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
+						<li class="nav-item">
+							<a class="nav-link" href="/">Главная</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="about.html">О компании</a>
@@ -81,8 +81,8 @@
 						<li class="nav-item">
 							<a class="nav-link" href="news.html">Новости</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="licenses.html">Лицензии и сертификаты</a>
+						<li class="nav-item active">
+							<a class="nav-link" href="licenses.html">Лицензии и сертификаты <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#contacts">Контакты</a>
@@ -317,7 +317,7 @@
 						<nav aria-label="breadcrumb">
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="#">Главная</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Библиотека</li>
+								<li class="breadcrumb-item active" aria-current="page">Лицензии и сертификаты</li>
 							</ol>
 						</nav>
 
