--- a/about.html
+++ b/about.html
@@ -61,11 +61,11 @@
 
 				<div class="collapse navbar-collapse" id="navbarsExample07">
 					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="/">Главная <span class="sr-only">(current)</span></a>
-						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="about.html">О компании</a>
+							<a class="nav-link" href="/">Главная</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="about.html">О компании <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="products.html" id="dropdown07" data-toggle="dropdown-none"
@@ -308,7 +308,7 @@
 						<nav aria-label="breadcrumb">
 							<ol class="breadcrumb">
 								<li class="breadcrumb-item"><a href="#">Главная</a></li>
-								<li class="breadcrumb-item active" aria-current="page">Библиотека</li>
+								<li class="breadcrumb-item active" aria-current="page">О компании</li>
 							</ol>
 						</nav>
 						<h1 class="base mt-3 mb-5">АО Эпсилон</h1>
