добавил картинки базовых разделов и разметил

--- a/products.html
+++ b/products.html
@@ -109,28 +109,28 @@
 						<h1 class="base mt-3 mb-5">Изделия</h1>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-1"></a>
+						<a role="button" href="#"><img class="border p-1" src="img/products/SVCh_komponenty.png" alt=""></a>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-2"></a>
+						<a role="button" href="#"><img class="border p-1" src="img/products/Tsifrovye_mikroskhemy.png" alt=""></a>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-2"></a>
+						<a role="button" href="#"><img class="border p-1" src="img/products/Analogovye_mikroskhemy.png" alt=""></a>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-2"></a>
+						<a role="button" href="#"><img class="border p-1" src="img/products/Passivnye_komponenty.png" alt=""></a>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-2"></a>
+						<a role="button" href="#"><img class="border p-1" src="img/products/Elektromekhanicheskie_komponenty.png" alt=""></a>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-2"></a>
+						<a role="button" href="#"><img class="border p-1" src="img/products/Kvartsevye_generatory_i_rezonatory.png" alt=""></a>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-2"></a>
+						<a role="button" href="#"><img class="border p-1" src="img/products/Optoelektronnye_komponenty.png" alt=""></a>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/licenses/license-1.jpg" alt="license-2"></a>
+						<a role="button" href="#"><img class="border p-1" src="img/products/Vtorichnye_istochniki_pitaniya.png" alt=""></a>
 					</div>
 				</div>
 			</div>
