закончил стр Изделия

--- a/products.html
+++ b/products.html
@@ -104,33 +104,41 @@
 						<li class="breadcrumb-item active" aria-current="page">Изделия</li>
 					</ol>
 				</nav>
-				<div class="row">
+				<div class="row text-center text-lg-left ">
 					<div class="col-12">
-						<h1 class="base mt-3 mb-5">Изделия</h1>
+						<h1 class="base text-left mt-3 mb-5">Изделия</h1>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/products/SVCh_komponenty.png" alt=""></a>
+						<a role="button" href="#"><img src="img/products/SVCh_komponenty.png" alt=""></a>
+						<h3 class="h-common">СВЧ-компоненты</h3>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/products/Tsifrovye_mikroskhemy.png" alt=""></a>
+						<a role="button" href="#"><img src="img/products/Tsifrovye_mikroskhemy.png" alt=""></a>
+						<h3 class="h-common">Цифровые микросхемы</h3>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/products/Analogovye_mikroskhemy.png" alt=""></a>
+						<a role="button" href="#"><img src="img/products/Analogovye_mikroskhemy.png" alt=""></a>
+						<h3 class="h-common">Аналоговые микросхемы</h3>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/products/Passivnye_komponenty.png" alt=""></a>
+						<a role="button" href="#"><img src="img/products/Passivnye_komponenty.png" alt=""></a>
+						<h3 class="h-common">Пассивные компоненты</h3>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/products/Elektromekhanicheskie_komponenty.png" alt=""></a>
+						<a role="button" href="#"><img src="img/products/Elektromekhanicheskie_komponenty.png" alt=""></a>
+						<h3 class="h-common">Электромеханические<br>компоненты</h3>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/products/Kvartsevye_generatory_i_rezonatory.png" alt=""></a>
+						<a role="button" href="#"><img src="img/products/Kvartsevye_generatory_i_rezonatory.png" alt=""></a>
+						<h3 class="h-common">Кварцевые генераторы<br>и резонаторы</h3>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/products/Optoelektronnye_komponenty.png" alt=""></a>
+						<a role="button" href="#"><img src="img/products/Optoelektronnye_komponenty.png" alt=""></a>
+						<h3 class="h-common">Оптоэлектронные<br>компоненты</h3>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3 mb-3">
-						<a role="button" href="#"><img class="border p-1" src="img/products/Vtorichnye_istochniki_pitaniya.png" alt=""></a>
+						<a role="button" href="#"><img src="img/products/Vtorichnye_istochniki_pitaniya.png" alt=""></a>
+						<h3 class="h-common">Вторичные<br>источники питания</h3>
 					</div>
 				</div>
 			</div>
