--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="img/svg/logo.svg" type="image/svg+xml">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
-	<title>Epsilon</title>
+	<title>Epsilon - О компании</title>
 </head>
 
 <body class="d-flex flex-column h-100">
