переделка стр Новости

--- a/news.html
+++ b/news.html
@@ -322,144 +322,66 @@
 							</ol>
 						</nav>
 
-						<div class="row">
+						<div class="row news-block">
 							<div class="col-lg-6">
 								<div class="card mb-3">
-									<div class="row no-gutters">
-										<div class="col-md-4">
-											<svg class="bd-placeholder-img" width="100%" height="auto" xmlns="http://www.w3.org/2000/svg" role="img"
-												aria-label="Placeholder: Изображение" preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#6c757d"></rect>
-											</svg>
-										</div>
-										<div class="col-md-8">
-											<div class="card-body">
-												<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
-												<h5 class="card-title">Заголовок новости</h5>
-												<p class="card-text">Это более широкая карта с вспомогательным текстом ниже в качестве естественного
-													перехода к дополнительному контенту. Этот контент немного длиннее.</p>
-												<a href="#" class="card-link">Подробнее...</a>
-											</div>
-										</div>
+									<img src="img/news/1.jpg" alt="">
+									<div class="card-body">
+										<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
+										<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor</h5>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-6">
 								<div class="card mb-3">
-									<div class="row no-gutters">
-										<div class="col-md-4">
-											<svg class="bd-placeholder-img" width="100%" height="auto" xmlns="http://www.w3.org/2000/svg" role="img"
-												aria-label="Placeholder: Изображение" preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#6c757d"></rect>
-											</svg>
-										</div>
-										<div class="col-md-8">
-											<div class="card-body">
-												<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
-												<h5 class="card-title">Заголовок новости</h5>
-												<p class="card-text">Это более широкая карта с вспомогательным текстом ниже в качестве естественного
-													перехода к дополнительному контенту. Этот контент немного длиннее.</p>
-												<a href="#" class="card-link">Подробнее...</a>
-											</div>
-										</div>
+									<img src="img/news/2.jpg" alt="">
+									<div class="card-body">
+										<p class="card-text"><small class="text-dated">23 Апреля 2023</small></p>
+										<h5 class="card-title">Lorem ipsum dolor sit amet</h5>
 									</div>
 								</div>
 							</div>
 
 							<div class="col-lg-6">
 								<div class="card mb-3">
-									<div class="row no-gutters">
-										<div class="col-md-4">
-											<svg class="bd-placeholder-img" width="100%" height="auto" xmlns="http://www.w3.org/2000/svg" role="img"
-												aria-label="Placeholder: Изображение" preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#6c757d"></rect>
-											</svg>
-										</div>
-										<div class="col-md-8">
-											<div class="card-body">
-												<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
-												<h5 class="card-title">Заголовок новости</h5>
-												<p class="card-text">Это более широкая карта с вспомогательным текстом ниже в качестве естественного
-													перехода к дополнительному контенту. Этот контент немного длиннее.</p>
-												<a href="#" class="card-link">Подробнее...</a>
-											</div>
-										</div>
+									<img src="img/news/3.jpg" alt="">
+									<div class="card-body">
+										<p class="card-text"><small class="text-dated">22 Апреля 2023</small></p>
+										<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor, aliquid, porro amet</h5>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-6">
 								<div class="card mb-3">
-									<div class="row no-gutters">
-										<div class="col-md-4">
-											<svg class="bd-placeholder-img" width="100%" height="auto" xmlns="http://www.w3.org/2000/svg" role="img"
-												aria-label="Placeholder: Изображение" preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#6c757d"></rect>
-											</svg>
-										</div>
-										<div class="col-md-8">
-											<div class="card-body">
-												<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
-												<h5 class="card-title">Заголовок новости</h5>
-												<p class="card-text">Это более широкая карта с вспомогательным текстом ниже в качестве естественного
-													перехода к дополнительному контенту. Этот контент немного длиннее.</p>
-												<a href="#" class="card-link">Подробнее...</a>
-											</div>
-										</div>
+									<img src="img/news/4.jpg" alt="">
+									<div class="card-body">
+										<p class="card-text"><small class="text-dated">21 Апреля 2023</small></p>
+										<h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero tempore quos perferendis deserunt veritatis saepe dolore error</h5>
 									</div>
 								</div>
 							</div>
 
 							<div class="col-lg-6">
 								<div class="card mb-3">
-									<div class="row no-gutters">
-										<div class="col-md-4">
-											<svg class="bd-placeholder-img" width="100%" height="auto" xmlns="http://www.w3.org/2000/svg" role="img"
-												aria-label="Placeholder: Изображение" preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#6c757d"></rect>
-											</svg>
-										</div>
-										<div class="col-md-8">
-											<div class="card-body">
-												<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
-												<h5 class="card-title">Заголовок новости</h5>
-												<p class="card-text">Это более широкая карта с вспомогательным текстом ниже в качестве естественного
-													перехода к дополнительному контенту. Этот контент немного длиннее.</p>
-												<a href="#" class="card-link">Подробнее...</a>
-											</div>
-										</div>
+									<img src="img/news/5.jpg" alt="">
+									<div class="card-body">
+										<p class="card-text"><small class="text-dated">20 Апреля 2023</small></p>
+										<h5 class="card-title">Lorem ipsum dolor sit amet</h5>
 									</div>
 								</div>
 							</div>
 							<div class="col-lg-6">
 								<div class="card mb-3">
-									<div class="row no-gutters">
-										<div class="col-md-4">
-											<svg class="bd-placeholder-img" width="100%" height="auto" xmlns="http://www.w3.org/2000/svg" role="img"
-												aria-label="Placeholder: Изображение" preserveAspectRatio="xMidYMid slice" focusable="false">
-												<title>Placeholder</title>
-												<rect width="100%" height="100%" fill="#6c757d"></rect>
-											</svg>
-										</div>
-										<div class="col-md-8">
-											<div class="card-body">
-												<p class="card-text"><small class="text-dated">24 Апреля 2023</small></p>
-												<h5 class="card-title">Заголовок новости</h5>
-												<p class="card-text">Это более широкая карта с вспомогательным текстом ниже в качестве естественного
-													перехода к дополнительному контенту. Этот контент немного длиннее.</p>
-												<a href="#" class="card-link">Подробнее...</a>
-											</div>
-										</div>
+									<img src="img/news/6.jpg" alt="">
+									<div class="card-body">
+										<p class="card-text"><small class="text-dated">19 Апреля 2023</small></p>
+										<h5 class="card-title">Lorem ipsum dolor sit amet consectetur lor, aliquid, porro amet suscipit ex eveniet placeat rem quae</h5>
 									</div>
 								</div>
 							</div>
 
 							<div class="col-12 mt-5">
-								<nav aria-label="Пример навигации по страницам">
+								<nav aria-label="Пагинация по страницам">
 									<ul class="pagination justify-content-center">
 										<li class="page-item disabled">
 											<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Предыдущая</a>
